feature-BJS2-96857-added-analytics